# kate-code

./: .dockerignore  .gitignore  .mcp.json  CLAUDE.md  CMakeLists.txt  Dockerfile.arch  Dockerfile.deb  Dockerfile.rpm  LICENSE  Makefile  PKGBUILD  README.md  build-packages.sh  kate-code.spec
debian/: changelog  control  copyright  rules
pkg/kate-code/usr/lib/qt6/plugins/kf6/ktexteditor/: katecode.json
src/: CMakeLists.txt  katecode.qrc  katecodeui.rc
src/acp/: ACPModels.h  ACPService.cpp  ACPService.h  ACPSession.cpp  ACPSession.h  CLAUDE.md  TerminalManager.cpp  TerminalManager.h
src/config/: KateCodeConfigPage.cpp  KateCodeConfigPage.h  SettingsStore.cpp  SettingsStore.h
src/mcp/: EditorDBusService.cpp  EditorDBusService.h  MCPServer.cpp  MCPServer.h  main.cpp
src/plugin/: CLAUDE.md  KateCodePlugin.cpp  KateCodePlugin.h  KateCodeView.cpp  KateCodeView.h
src/ui/: CLAUDE.md  ChatInputWidget.cpp  ChatInputWidget.h  ChatWebView.cpp  ChatWebView.h  ChatWidget.cpp  ChatWidget.h  PermissionDialog.cpp  PermissionDialog.h  SessionSelectionDialog.cpp  SessionSelectionDialog.h
src/util/: CLAUDE.md  DiffHighlightManager.cpp  DiffHighlightManager.h  EditTracker.cpp  EditTracker.h  KDEColorScheme.cpp  KDEColorScheme.h  KateThemeConverter.cpp  KateThemeConverter.h  SessionStore.cpp  SessionStore.h  SummaryGenerator.cpp  SummaryGenerator.h  SummaryStore.cpp  SummaryStore.h  TranscriptWriter.cpp  TranscriptWriter.h
src/web/: chat.css  chat.html  chat.js  terminal-renderer.js
